# ds4-rs

./: .gitignore  AGENT.md  Cargo.toml  README.md  build.rs  dump_gguf.py  fix.py  fix2.py  patch_decode.py  patch_head.py  split_metal_fix.py
src/: continuation.rs  engine.rs  error.rs  ffi.rs  gguf.rs  kv.rs  lib.rs  model.rs  protocol.rs  server.rs  server.rs.patch  session.rs  tokenizer.rs  types.rs  weights.rs
src/engine/: inference.rs  tests.rs
src/kernels/: activation.rs  attention.rs  decode_scratch.rs  ds4_constants.rs  ffn.rs  hc.rs  matmul.rs  metal_graph.rs  mod.rs  norm.rs  quant.rs
src/kernels/metal/: decode.rs  graph.rs  head.rs  mod.rs
src/protocol/: jsonish.rs  parse.rs  render.rs  tests.rs
src/server/: reply.rs  tools.rs
sys/: ds4_metal.m
tests/: kv_disk.rs  test_vectors.rs
