[package]
name = "ds4-rust"
version = "0.1.0"
edition = "2021"
description = "Minimal Rust rewrite skeleton for ds4"

[dependencies]
memmap2 = "0.9"
libc = "0.2"
tokio = { version = "1.52.3", features = ["full"] }
axum = "0.8.9"
thiserror = "2.0.18"
tracing = "0.1.44"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
smallvec = "1.15.1"
async-stream = "0.3.6"
tokio-stream = "0.1.18"

[build-dependencies]
cc = "1.0"
bindgen = "0.69"

[lib]
name = "ds4_rust"
path = "src/lib.rs"

[[bin]]
name = "ds4"
path = "src/bin/ds4.rs"

[[bin]]
name = "ds4-server"
path = "src/bin/ds4-server.rs"
